[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemies/Turret_1.png" type="Texture" id=1]
[ext_resource path="res://Enemies/EnemyTurret.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[node name="EnemyTurret" type="Node2D"]
script = ExtResource( 2 )

[node name="Turret" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 2, 0 )
vframes = 2

[node name="Muzzle" type="Position2D" parent="Turret"]
position = Vector2( 29, 0 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
frame = 1

[node name="Turret_Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turret_Vision"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Turret_Vision" to="." method="_on_Turret_Vision_body_entered"]
[connection signal="body_exited" from="Turret_Vision" to="." method="_on_Turret_Vision_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
